--- a/public/styles/_character-profile.scss
+++ b/public/styles/_character-profile.scss
@@ -1,15 +1,22 @@
 .character-profile {
 
+  // Grid
   display: grid !important;
   grid-template-columns: 34% 55% 8%;
   grid-template-rows: auto auto auto auto auto auto;
 
-  padding-left: $base-unit * fibonacci(8);
-  padding-right: $base-unit * fibonacci(8);
+  // Padding
+  padding: $base-unit * fibonacci(8);
+
+  // Borders
+  border: 1px solid $lightest-grey;
 
   .character-image {
     grid-column: 1;
-    grid-row: 1;
+    grid-row: 1 / span 5;
+    background-color: $black;
+    background-image: $hideout;
+    padding: $base-unit * fibonacci(8);
   }
 
   .character-level {
