--- a/public/styles/_save-slot.scss
+++ b/public/styles/_save-slot.scss
@@ -1,99 +1,33 @@
-.char-profile {
+.save-slot {
 
   display: grid !important;
-  grid-template-columns: $base-unit * fibonacci(11) 125px 50px auto;
-  grid-template-rows: 50px 50px 50px 50px 20px 20px;
+  grid-template-columns: 100%;
+  grid-template-rows: auto auto auto auto;
 
-  // The character's name
-  .name {
-    padding-top: $base-unit * fibonacci(7);
-    padding-bottom: $base-unit * fibonacci(7);
-    padding-left: $base-unit * fibonacci(7);
-    font-family: $title-font;
-    font-size: 2.5em;
-    font-weight: 700;
-    grid-column: 2 / span 4;
-    grid-row: 1;
-    color: $black;
-  }
+  // Padding
+  padding: $base-unit * fibonacci(8);
 
+  // Borders
+  border: 1px solid $lightest-grey;
 
-  // The character's job 
-  .job {
-    padding-top: $base-unit * fibonacci(7);
-    padding-bottom: $base-unit * fibonacci(7);
-    font-family: $title-font;
-    font-size: 1.8em;
-    font-weight: 400;
-    grid-column: 2 / span 4;
-    grid-row: 2;
-    color: $middle-grey;
-
-  }
-
-  // The character's mugshot
-  .img {
-    padding: $base-unit * fibonacci(7);
+  .character-image {
     grid-column: 1;
     grid-row: 1;
   }
 
-  // The character's current level
-  .lvl {
+  .party-images {
+    grid-column: 1;
+    grid-row: 2;
+  }
 
-    grid-column: 2 / span 4;
-    grid-row: 3;
-    color: $light-grey;
-    text-transform: lowercase;
-
-    .number {
-      font-family: $title-font;
-      font-size: 2em;
-      font-weight: 400;
-
-    }
-
-    progress {
-      -webkit-appearance: none; /* Reset appearance */
-      border: 1px solid $light-grey;
-      width: 300px;
-      background-color: $middle-grey;
-    }
+  .character-level {
 
   }
-  
-  // The character's hitpoint section
-  .hp {
 
-    grid-column: 2;
+  .total-play-time {
+    grid-column: 1;
     grid-row: 4;
-
-    meter {
-      // -webkit-appearance: none; /* Reset appearance */
-      border: 1px solid $light-grey;
-      width: 300px;
-      background-color: $middle-grey;
-    }
-
   }
 
-  // The character's magic point section
-  .mp {
-
-    grid-column: 2;
-    grid-row: 5;
-
-    meter {
-      // -webkit-appearance: none; /* Reset appearance */
-      border: 1px solid $light-grey;
-      width: 300px;
-      background-color: $middle-grey;
-    }
-
-    meter::-webkit-meter-optimum-value {
-      background-color: steelblue;
-    }
-
-  }
 
 }
