--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -1,3 +1,6 @@
+// Reset styles
+@import 'reset';
+
 @import 'units';
 @import 'functions';
 @import 'spacing';
@@ -17,23 +20,15 @@
 @import 'magic-points';
 @import 'experience-points';
 
+// Chapters
+@import 'chapter-name';
+@import 'chapter-number';
+
+// Time
+@import 'total-play-time';
+
 // Components
 @import 'character-profile';
 @import 'character-level-up';
 @import 'dialogue-box';
 @import 'save-slot';
-
-body {
-  margin: 0 auto;
-  line-height: 16px;
-}
-
-.logo h1 {
-  // display: inline;
-  font-family: $title-font;
-}
-
-.logo img {
-  margin-top: 18px;
-  width: 50px;
-}
