--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -8,7 +8,9 @@
 @import 'fonts';
 @import 'borders';
 @import 'backgrounds';
+@import 'buttons';
 @import 'media-breakpoints';
+
 
 // Characters
 @import 'character-name';
