--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -81,6 +81,15 @@ table {
   height: 233px;
 }
 
+button {
+  background-color: #ffffff;
+  border: 1px solid #e3e3e3;
+  cursor: pointer;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.9em;
+  padding: 13px;
+}
+
 .character-name {
   font-family: "Lora", serif;
   font-size: 2.3em;
@@ -250,14 +259,20 @@ table {
 .dialogue-box .character-image {
   grid-column: 1;
   grid-row: 1;
+  background-color: #000000;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath fill-rule='evenodd' d='M0 0h4v4H0V0zm4 4h4v4H4V4z'/%3E%3C/g%3E%3C/svg%3E");
+  padding: 34px;
 }
 .dialogue-box .character-name {
   grid-column: 1;
   grid-row: 2;
+  padding-top: 13px;
+  padding-bottom: 13px;
 }
 .dialogue-box .dialogue-content {
   grid-column: 1;
   grid-row: 3;
+  padding-bottom: 13px;
 }
 @media screen and (min-width: 800px) {
   .dialogue-box {
@@ -292,6 +307,10 @@ table {
 .save-slot .party-images {
   grid-column: 1;
   grid-row: 2;
+}
+.save-slot .total-play-time {
+  grid-column: 1;
+  grid-row: 4;
 }
 
 /*# sourceMappingURL=styles.css.map */
