--- a/public/styles/_character-profile.scss
+++ b/public/styles/_character-profile.scss
@@ -2,7 +2,7 @@
 
   // Grid
   display: grid !important;
-  grid-template-columns: 34% 55% 8%;
+  grid-template-columns: 100%;
   grid-template-rows: auto auto auto auto auto auto;
 
   // Padding
@@ -13,78 +13,45 @@
 
   .character-image {
     grid-column: 1;
-    grid-row: 1 / span 5;
+    grid-row: 1;
     background-color: $black;
     background-image: $hideout;
     padding: $base-unit * fibonacci(8);
   }
 
-  .character-level {
+  .character-name {
     grid-column: 1;
     grid-row: 2;
-  }
-
-  .character-name {
-    grid-column: 2;
-    grid-row: 1;
+    // Padding
+    padding-top: $base-unit * fibonacci(6);
   }
 
   .character-job {
-    grid-column: 2;
-    grid-row: 2;
+    grid-column: 1;
+    grid-row: 3;
+    // Padding
+    padding-top: $base-unit * fibonacci(5);
   }
 
   .hit-points {
-    grid-column: 2;
-    grid-row: 3;
+    grid-column: 1;
+    grid-row: 4;
+    // Padding
+    padding-top: $base-unit * fibonacci(4);
   }
 
   .magic-points {
-    grid-column: 2;
-    grid-row: 4;
+    grid-column: 1;
+    grid-row: 5;
+    // Padding
+    padding-top: $base-unit * fibonacci(4);
   }
 
   .experience-points {
-    grid-column: 2;
-    grid-row: 5;
-  }
-
-  // On narrow
-  @media screen and (min-width: $break-narrow) {
-
-    grid-template-columns: 100%;
-    grid-template-rows: auto auto auto auto auto;
-
-    .character-image {
-      grid-column: 1;
-      grid-row: 1;
-    }
-   
-    .character-name {
-      grid-column: 1;
-      grid-row: 2;
-    }
-  
-    .character-job {
-      grid-column: 1;
-      grid-row: 3;
-    }
-  
-    .hit-points {
-      grid-column: 1;
-      grid-row: 4;
-    }
-  
-    .magic-points {
-      grid-column: 1;
-      grid-row: 5;
-    }
-  
-    .experience-points {
-      grid-column: 1;
-      grid-row: 6;
-    }
-
+    grid-column: 1;
+    grid-row: 6;
+    // Padding
+    padding-top: $base-unit * fibonacci(4);
   }
   
   // On medium
