--- a/public/styles/_save-slot.scss
+++ b/public/styles/_save-slot.scss
@@ -1,5 +1,6 @@
 .save-slot {
 
+  // Grid
   display: grid !important;
   grid-template-columns: 100%;
   grid-template-rows: auto auto auto auto;
@@ -18,6 +19,15 @@
   .party-images {
     grid-column: 1;
     grid-row: 2;
+  }
+
+  .chapter {
+    grid-column: 1;
+    grid-row: 3;
+
+    // Padding
+    padding-top: $base-unit * fibonacci(6);
+    padding-bottom: $base-unit * fibonacci(6);
   }
 
   .character-level {
