--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -90,6 +90,38 @@ button {
   padding: 13px;
 }
 
+.main {
+  margin: 0 auto;
+  max-width: 1200px;
+  width: 89%;
+  padding-bottom: 34px;
+}
+.main .logo {
+  width: 100px;
+  display: inline;
+}
+.main .brand {
+  display: inline;
+  font-family: "Lora", serif;
+  font-size: 3.7em;
+  font-weight: 700;
+  color: #000000;
+}
+.main .intro {
+  margin-top: 34px;
+}
+.main .intro p {
+  padding-bottom: 13px;
+  line-height: 1.5;
+  font-size: 18px;
+}
+.main .intro ul {
+  margin-top: 21px;
+  margin-bottom: 34px;
+  line-height: 1.5;
+  font-size: 18px;
+}
+
 .character-name {
   font-family: "Lora", serif;
   font-size: 2.3em;
@@ -99,7 +131,7 @@ button {
 
 .character-job {
   font-family: "Lora", serif;
-  font-size: 1.8em;
+  font-size: 1.5em;
   font-weight: 400;
   color: #575757;
 }
@@ -151,71 +183,42 @@ button {
 
 .character-profile {
   display: grid !important;
-  grid-template-columns: 34% 55% 8%;
+  grid-template-columns: 100%;
   grid-template-rows: auto auto auto auto auto auto;
   padding: 34px;
   border: 1px solid #e3e3e3;
 }
 .character-profile .character-image {
   grid-column: 1;
-  grid-row: 1/span 5;
+  grid-row: 1;
   background-color: #000000;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   padding: 34px;
 }
-.character-profile .character-level {
+.character-profile .character-name {
   grid-column: 1;
   grid-row: 2;
-}
-.character-profile .character-name {
-  grid-column: 2;
-  grid-row: 1;
+  padding-top: 13px;
 }
 .character-profile .character-job {
-  grid-column: 2;
-  grid-row: 2;
+  grid-column: 1;
+  grid-row: 3;
+  padding-top: 8px;
 }
 .character-profile .hit-points {
-  grid-column: 2;
-  grid-row: 3;
+  grid-column: 1;
+  grid-row: 4;
+  padding-top: 5px;
 }
 .character-profile .magic-points {
-  grid-column: 2;
-  grid-row: 4;
+  grid-column: 1;
+  grid-row: 5;
+  padding-top: 5px;
 }
 .character-profile .experience-points {
-  grid-column: 2;
-  grid-row: 5;
-}
-@media screen and (min-width: 320px) {
-  .character-profile {
-    grid-template-columns: 100%;
-    grid-template-rows: auto auto auto auto auto;
-  }
-  .character-profile .character-image {
-    grid-column: 1;
-    grid-row: 1;
-  }
-  .character-profile .character-name {
-    grid-column: 1;
-    grid-row: 2;
-  }
-  .character-profile .character-job {
-    grid-column: 1;
-    grid-row: 3;
-  }
-  .character-profile .hit-points {
-    grid-column: 1;
-    grid-row: 4;
-  }
-  .character-profile .magic-points {
-    grid-column: 1;
-    grid-row: 5;
-  }
-  .character-profile .experience-points {
-    grid-column: 1;
-    grid-row: 6;
-  }
+  grid-column: 1;
+  grid-row: 6;
+  padding-top: 5px;
 }
 .character-level-up {
   display: grid !important;
@@ -274,10 +277,10 @@ button {
   grid-row: 3;
   padding-bottom: 13px;
 }
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 320px) {
   .dialogue-box {
     display: grid !important;
-    grid-template-columns: 21% 55%;
+    grid-template-columns: 34% 55%;
     grid-template-rows: auto auto;
   }
   .dialogue-box .character-image {
@@ -307,6 +310,12 @@ button {
 .save-slot .party-images {
   grid-column: 1;
   grid-row: 2;
+}
+.save-slot .chapter {
+  grid-column: 1;
+  grid-row: 3;
+  padding-top: 13px;
+  padding-bottom: 13px;
 }
 .save-slot .total-play-time {
   grid-column: 1;
