Styling work on dialogue box and save slot components.

--- a/public/styles/_colors.scss
+++ b/public/styles/_colors.scss
@@ -5,3 +5,8 @@ $middle-grey: lighten($black, 34%);
 $light-grey: lighten($black, 55%);
 $lightest-grey: lighten($black, 89%);
 $white: #ffffff;
+
+$red: #FF0000;
+$blue: #171796;
+$light-blue: #0093DD;
+$yellow: #F7DB17;
