--- a/public/styles/_dialogue-box.scss
+++ b/public/styles/_dialogue-box.scss
@@ -15,9 +15,9 @@
     grid-column: 1;
     grid-row: 1;
 
-    background-color: $black;
-    background-image: $checkers;
-    padding: $base-unit * fibonacci(8);
+    // background-color: $red;
+    // background-image: $diamonds;
+    // padding: $base-unit * fibonacci(8);
   }
 
   .character-name {
@@ -33,25 +33,33 @@
     grid-column: 1;
     grid-row: 3;
 
+    font-size: 1.5em;
+
     // Padding
     padding-bottom: $base-unit * fibonacci(6);
   }
 
   // On medium
-  @media screen and (min-width: $break-narrow) {
+  @media screen and (min-width: $break-medium) {
 
     display: grid !important;
-    grid-template-columns: 34% 55%;
+    grid-template-columns: auto auto;
     grid-template-rows: auto auto;
 
     .character-image {
       grid-column: 1;
       grid-row: 1 / span 2;
+
+      // Padding
+      padding-right: $base-unit * fibonacci(8);
     }
   
     .character-name {
       grid-column: 2;
       grid-row: 1;
+
+      // Padding
+      padding-top: 0;
     }
   
     .dialogue-content {
