--- a/public/styles/_save-slot.scss
+++ b/public/styles/_save-slot.scss
@@ -19,6 +19,9 @@
   .party-images {
     grid-column: 1;
     grid-row: 2;
+
+    // Padding
+    padding-top: $base-unit * fibonacci(5);
   }
 
   .chapter {
@@ -39,5 +42,41 @@
     grid-row: 4;
   }
 
+  // On medium
+  @media screen and (min-width: $break-medium) {
+
+    display: grid !important;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto;
+
+    .character-image {
+      grid-column: 1;
+      grid-row: 1;
+    }
+  
+    .party-images {
+      grid-column: 1;
+      grid-row: 2;
+    }
+  
+    .chapter {
+      grid-column: 2;
+      grid-row: 1;
+  
+      // Padding
+      padding-top: 0;
+    }
+
+    .character-level {
+      grid-column: 2;
+      grid-row: 2;
+    }
+
+  }
+
+  // On wide
+  @media screen and (min-width: $break-wide) {
+
+  }
 
 }
