--- a/public/styles/_character-profile.scss
+++ b/public/styles/_character-profile.scss
@@ -14,48 +14,100 @@
   .character-image {
     grid-column: 1;
     grid-row: 1;
-    background-color: $black;
-    background-image: $hideout;
-    padding: $base-unit * fibonacci(8);
   }
 
   .character-name {
-    grid-column: 1;
-    grid-row: 2;
+    grid-column: 2;
+    grid-row: 1;
+
     // Padding
     padding-top: $base-unit * fibonacci(6);
   }
 
   .character-job {
-    grid-column: 1;
-    grid-row: 3;
+    grid-column: 2;
+    grid-row: 2;
+
     // Padding
     padding-top: $base-unit * fibonacci(5);
   }
 
   .hit-points {
-    grid-column: 1;
-    grid-row: 4;
+    grid-column: 2;
+    grid-row: 3;
+
     // Padding
     padding-top: $base-unit * fibonacci(4);
+    
   }
 
   .magic-points {
-    grid-column: 1;
-    grid-row: 5;
+    grid-column: 2;
+    grid-row: 4;
+
     // Padding
     padding-top: $base-unit * fibonacci(4);
   }
 
   .experience-points {
-    grid-column: 1;
-    grid-row: 6;
+    grid-column: 2;
+    grid-row: 5;
+
     // Padding
     padding-top: $base-unit * fibonacci(4);
   }
   
   // On medium
   @media screen and (min-width: $break-medium) {
+
+    display: grid !important;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto auto;
+
+    .character-image {
+      grid-column: 1;
+      grid-row: 1;
+    }
+  
+    .character-name {
+      grid-column: 2;
+      grid-row: 1;
+
+      // Padding
+      padding-top: 0;
+    }
+  
+    .character-job {
+      grid-column: 2;
+      grid-row: 2;
+
+      // Padding
+      padding-top: $base-unit * fibonacci(5);
+    }
+  
+    .hit-points {
+      grid-column: 2;
+      grid-row: 3;
+
+      // Padding
+      padding-top: $base-unit * fibonacci(4);
+    }
+  
+    .magic-points {
+      grid-column: 2;
+      grid-row: 4;
+
+      // Padding
+      padding-top: $base-unit * fibonacci(4);
+    }
+  
+    .experience-points {
+      grid-column: 2;
+      grid-row: 5;
+
+      // Padding
+      padding-top: $base-unit * fibonacci(4);
+    }
 
   }
 
