--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -96,6 +96,9 @@ button {
   width: 89%;
   padding-bottom: 34px;
 }
+.main .masthead {
+  margin-top: 34px;
+}
 .main .logo {
   width: 100px;
   display: inline;
@@ -191,34 +194,67 @@ button {
 .character-profile .character-image {
   grid-column: 1;
   grid-row: 1;
-  background-color: #000000;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  padding: 34px;
 }
 .character-profile .character-name {
-  grid-column: 1;
-  grid-row: 2;
+  grid-column: 2;
+  grid-row: 1;
   padding-top: 13px;
 }
 .character-profile .character-job {
-  grid-column: 1;
-  grid-row: 3;
+  grid-column: 2;
+  grid-row: 2;
   padding-top: 8px;
 }
 .character-profile .hit-points {
-  grid-column: 1;
-  grid-row: 4;
+  grid-column: 2;
+  grid-row: 3;
   padding-top: 5px;
 }
 .character-profile .magic-points {
-  grid-column: 1;
-  grid-row: 5;
+  grid-column: 2;
+  grid-row: 4;
   padding-top: 5px;
 }
 .character-profile .experience-points {
-  grid-column: 1;
-  grid-row: 6;
+  grid-column: 2;
+  grid-row: 5;
   padding-top: 5px;
+}
+@media screen and (min-width: 800px) {
+  .character-profile {
+    display: grid !important;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto auto;
+  }
+  .character-profile .character-image {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .character-profile .character-name {
+    grid-column: 2;
+    grid-row: 1;
+    padding-top: 0;
+  }
+  .character-profile .character-job {
+    grid-column: 2;
+    grid-row: 2;
+    padding-top: 8px;
+  }
+  .character-profile .hit-points {
+    grid-column: 2;
+    grid-row: 3;
+    padding-top: 5px;
+  }
+  .character-profile .magic-points {
+    grid-column: 2;
+    grid-row: 4;
+    padding-top: 5px;
+  }
+  .character-profile .experience-points {
+    grid-column: 2;
+    grid-row: 5;
+    padding-top: 5px;
+  }
 }
 .character-level-up {
   display: grid !important;
@@ -345,6 +381,9 @@ button {
     grid-column: 2;
     grid-row: 2;
   }
+}
+.party-images img {
+  margin-right: 21px;
 }
 
 /*# sourceMappingURL=styles.css.map */
