--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -27,6 +27,7 @@
 // Chapters
 @import 'chapter-name';
 @import 'chapter-number';
+@import 'chapter-description';
 
 // Time
 @import 'total-play-time';
@@ -36,3 +37,6 @@
 @import 'character-level-up';
 @import 'dialogue-box';
 @import 'save-slot';
+
+// Party
+@import 'party-images';
