Clean up markup on progress and meter elements.

--- a/public/styles/_magic-points.scss
+++ b/public/styles/_magic-points.scss
@@ -1,10 +1,10 @@
 .magic-points {
 
   meter {
-    -webkit-appearance: none; /* Reset appearance */
-    border: 1px solid $light-grey;
-    width: 300px;
-    background-color: $middle-grey;
+    // -webkit-appearance: none; /* Reset appearance */
+    // border: 1px solid $light-grey;
+    // width: 300px;
+    // background-color: $middle-grey;
   }
 
 }
