--- a/public/styles/_character-profile.scss
+++ b/public/styles/_character-profile.scss
@@ -17,24 +17,24 @@
   }
 
   .character-name {
-    grid-column: 2;
-    grid-row: 1;
+    grid-column: 1;
+    grid-row: 2;
 
     // Padding
     padding-top: $base-unit * fibonacci(6);
   }
 
   .character-job {
-    grid-column: 2;
-    grid-row: 2;
+    grid-column: 1;
+    grid-row: 3;
 
     // Padding
     padding-top: $base-unit * fibonacci(5);
   }
 
   .hit-points {
-    grid-column: 2;
-    grid-row: 3;
+    grid-column: 1;
+    grid-row: 4;
 
     // Padding
     padding-top: $base-unit * fibonacci(4);
@@ -42,16 +42,16 @@
   }
 
   .magic-points {
-    grid-column: 2;
-    grid-row: 4;
+    grid-column: 1;
+    grid-row: 5;
 
     // Padding
     padding-top: $base-unit * fibonacci(4);
   }
 
   .experience-points {
-    grid-column: 2;
-    grid-row: 5;
+    grid-column: 1;
+    grid-row: 6;
 
     // Padding
     padding-top: $base-unit * fibonacci(4);
@@ -66,7 +66,7 @@
 
     .character-image {
       grid-column: 1;
-      grid-row: 1;
+      grid-row: 1 / span 5;
     }
   
     .character-name {
