--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -139,30 +139,6 @@ button {
   color: #575757;
 }
 
-.hit-points meter {
-  -webkit-appearance: none;
-  /* Reset appearance */
-  border: 1px solid #8c8c8c;
-  width: 300px;
-  background-color: #575757;
-}
-
-.magic-points meter {
-  -webkit-appearance: none;
-  /* Reset appearance */
-  border: 1px solid #8c8c8c;
-  width: 300px;
-  background-color: #575757;
-}
-
-.experience-points meter {
-  -webkit-appearance: none;
-  /* Reset appearance */
-  border: 1px solid #8c8c8c;
-  width: 300px;
-  background-color: #575757;
-}
-
 .chapter-name {
   font-family: "Lora", serif;
   font-size: 1.7em;
@@ -196,28 +172,28 @@ button {
   grid-row: 1;
 }
 .character-profile .character-name {
-  grid-column: 2;
-  grid-row: 1;
+  grid-column: 1;
+  grid-row: 2;
   padding-top: 13px;
 }
 .character-profile .character-job {
-  grid-column: 2;
-  grid-row: 2;
+  grid-column: 1;
+  grid-row: 3;
   padding-top: 8px;
 }
 .character-profile .hit-points {
-  grid-column: 2;
-  grid-row: 3;
-  padding-top: 5px;
-}
-.character-profile .magic-points {
-  grid-column: 2;
+  grid-column: 1;
   grid-row: 4;
   padding-top: 5px;
 }
-.character-profile .experience-points {
-  grid-column: 2;
+.character-profile .magic-points {
+  grid-column: 1;
   grid-row: 5;
+  padding-top: 5px;
+}
+.character-profile .experience-points {
+  grid-column: 1;
+  grid-row: 6;
   padding-top: 5px;
 }
 @media screen and (min-width: 800px) {
@@ -228,7 +204,7 @@ button {
   }
   .character-profile .character-image {
     grid-column: 1;
-    grid-row: 1;
+    grid-row: 1/span 5;
   }
   .character-profile .character-name {
     grid-column: 2;
