--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -99,14 +99,15 @@ button {
 .main .masthead {
   margin-top: 34px;
 }
-.main .logo {
-  width: 100px;
-  display: inline;
+.main .fa-chess-king {
+  font-size: 3em;
+  padding-right: 13px;
+  vertical-align: baseline;
 }
 .main .brand {
   display: inline;
   font-family: "Lora", serif;
-  font-size: 3.7em;
+  font-size: 3em;
   font-weight: 700;
   color: #000000;
 }
