--- a/public/styles/message-box/_message-box.scss
+++ b/public/styles/message-box/_message-box.scss
@@ -1,4 +1,4 @@
-.dialogue-box {
+.message-box {
 
   // Grid
   display: grid !important;
@@ -11,16 +11,12 @@
   // Borders
   border: 1px solid $lightest-grey;
 
-  .character-image {
+  .player-image {
     grid-column: 1;
     grid-row: 1;
-
-    // background-color: $red;
-    // background-image: $diamonds;
-    // padding: $base-unit * fibonacci(8);
   }
 
-  .character-name {
+  .player-name {
     grid-column: 1;
     grid-row: 2;
 
@@ -29,7 +25,7 @@
     padding-bottom: $base-unit * fibonacci(6);
   }
 
-  .dialogue-content {
+  .message-content {
     grid-column: 1;
     grid-row: 3;
 
@@ -46,7 +42,7 @@
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
 
-    .character-image {
+    .player-image {
       grid-column: 1;
       grid-row: 1 / span 2;
 
@@ -54,7 +50,7 @@
       padding-right: $base-unit * fibonacci(8);
     }
   
-    .character-name {
+    .player-name {
       grid-column: 2;
       grid-row: 1;
 
@@ -62,7 +58,7 @@
       padding-top: 0;
     }
   
-    .dialogue-content {
+    .message-content {
       grid-column: 2;
       grid-row: 2;
     }
