--- a/public/styles/save-slot/_save-slot.scss
+++ b/public/styles/save-slot/_save-slot.scss
@@ -11,35 +11,14 @@
   // Borders
   border: 1px solid $lightest-grey;
 
-  .character-image {
+  .player-image {
     grid-column: 1;
     grid-row: 1;
   }
 
-  .party-images {
-    grid-column: 1;
-    grid-row: 2;
-
-    // Padding
-    padding-top: $base-unit * fibonacci(5);
-  }
-
-  .chapter {
-    grid-column: 1;
-    grid-row: 3;
-
-    // Padding
-    padding-top: $base-unit * fibonacci(6);
-    padding-bottom: $base-unit * fibonacci(6);
-  }
-
-  .character-level {
-
-  }
-
   .total-play-time {
     grid-column: 1;
-    grid-row: 4;
+    grid-row: 2;
   }
 
   // On medium
