--- a/public/styles/save-slot/_save-slot.scss
+++ b/public/styles/save-slot/_save-slot.scss
@@ -16,9 +16,27 @@
     grid-row: 1;
   }
 
-  .total-play-time {
+  .player-name {
     grid-column: 1;
     grid-row: 2;
+
+    // Padding
+    padding-top: $base-unit * fibonacci(6);
+    padding-bottom: $base-unit * fibonacci(6);
+  }
+
+  .total-play-time {
+    grid-column: 1;
+    grid-row: 3;
+
+    // Padding
+    padding-top: $base-unit * fibonacci(6);
+    padding-bottom: $base-unit * fibonacci(6);
+  }
+
+  .save-buttons {
+    grid-column: 1;
+    grid-row: 4;
   }
 
   // On medium
@@ -28,29 +46,25 @@
     grid-template-columns: auto auto auto;
     grid-template-rows: auto auto;
 
-    .character-image {
+    .player-image {
       grid-column: 1;
-      grid-row: 1;
-    }
-  
-    .party-images {
-      grid-column: 1;
-      grid-row: 2;
-    }
-  
-    .chapter {
-      grid-column: 2;
-      grid-row: 1;
-  
-      // Padding
-      padding-top: 0;
+      grid-row: 1 / span 2;
     }
 
-    .character-level {
+    .player-name {
+      grid-column: 2;
+      grid-row: 1;
+    }
+
+    .total-play-time {
       grid-column: 2;
       grid-row: 2;
     }
 
+    .save-buttons {
+      grid-column: 3;
+      grid-row: 1;
+    }
   }
 
   // On wide
