--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -128,7 +128,7 @@ button {
 
 .player-name {
   font-family: "Lora", serif;
-  font-size: 1.7em;
+  font-size: 2em;
   font-weight: 700;
   color: #000000;
 }
@@ -211,9 +211,21 @@ button {
   grid-column: 1;
   grid-row: 1;
 }
-.save-slot .total-play-time {
+.save-slot .player-name {
   grid-column: 1;
   grid-row: 2;
+  padding-top: 13px;
+  padding-bottom: 13px;
+}
+.save-slot .total-play-time {
+  grid-column: 1;
+  grid-row: 3;
+  padding-top: 13px;
+  padding-bottom: 13px;
+}
+.save-slot .save-buttons {
+  grid-column: 1;
+  grid-row: 4;
 }
 @media screen and (min-width: 800px) {
   .save-slot {
@@ -221,24 +233,27 @@ button {
     grid-template-columns: auto auto auto;
     grid-template-rows: auto auto;
   }
-  .save-slot .character-image {
+  .save-slot .player-image {
     grid-column: 1;
-    grid-row: 1;
+    grid-row: 1/span 2;
   }
-  .save-slot .party-images {
-    grid-column: 1;
-    grid-row: 2;
-  }
-  .save-slot .chapter {
+  .save-slot .player-name {
     grid-column: 2;
     grid-row: 1;
-    padding-top: 0;
   }
-  .save-slot .character-level {
+  .save-slot .total-play-time {
     grid-column: 2;
     grid-row: 2;
+  }
+  .save-slot .save-buttons {
+    grid-column: 3;
+    grid-row: 1;
   }
 }
+.message-content {
+  font-size: 1.5em;
+}
+
 .message-box {
   display: grid !important;
   grid-template-columns: 100%;
@@ -259,7 +274,6 @@ button {
 .message-box .message-content {
   grid-column: 1;
   grid-row: 3;
-  font-size: 1.5em;
   padding-bottom: 13px;
 }
 @media screen and (min-width: 800px) {
@@ -296,6 +310,38 @@ button {
   width: 98px;
   height: 98px;
   border: 1px solid #000000;
+}
+
+.game-view {
+  display: grid !important;
+  grid-template-columns: 100%;
+  grid-template-rows: auto auto auto auto;
+}
+.game-view .player {
+  margin-top: 21px;
+}
+.game-view .message-box {
+  margin-top: 21px;
+}
+@media screen and (min-width: 800px) {
+  .game-view {
+    display: grid !important;
+    grid-template-columns: 66% auto;
+    grid-template-rows: auto auto;
+  }
+  .game-view .chessboard {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .game-view .player {
+    grid-column: 2;
+    grid-row: 1;
+    margin-top: 0;
+  }
+  .game-view .message-box {
+    grid-column: 1/span 2;
+    grid-row: 2;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
