--- a/public/styles/player/_player-health.scss
+++ b/public/styles/player/_player-health.scss
@@ -7,4 +7,15 @@
     // background-color: $middle-grey;
   }
 
+  .player-barracks {
+
+    .fa-chess-king,
+    .fa-chess-queen,
+    .fa-chess-bishop,
+    .fa-chess-rook,
+    .fa-chess-pawn {
+      font-size: 1.3em;
+    }
+  }
+
 }
