--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -90,42 +90,50 @@ button {
   padding: 13px;
 }
 
-.main {
-  margin: 0 auto;
-  max-width: 1200px;
-  width: 89%;
+.body {
+  display: grid !important;
+  grid-template-columns: 100%;
+  grid-template-rows: auto auto auto;
+}
+.body .header {
+  grid-column: 1;
+  grid-row: 1;
+  padding-top: 34px;
+  padding-right: 21px;
+  padding-left: 21px;
+}
+.body .main {
+  grid-column: 1;
+  grid-row: 2;
+  padding-top: 34px;
+  padding-right: 21px;
   padding-bottom: 34px;
+  padding-left: 21px;
 }
-.main .masthead {
-  margin-top: 34px;
+.body .footer {
+  grid-column: 1;
+  grid-row: 3;
 }
-.main .fa-chess-king {
-  font-size: 3em;
-  padding-right: 13px;
-  vertical-align: baseline;
+@media screen and (min-width: 800px) {
+  .body {
+    display: grid !important;
+    grid-template-columns: 21% 79%;
+    grid-template-rows: auto auto;
+  }
+  .body .header {
+    grid-column: 1;
+    grid-row: 1;
+    height: 100vh;
+  }
+  .body .main {
+    grid-column: 2;
+    grid-row: 1;
+  }
+  .body .footer {
+    grid-column: 2;
+    grid-row: 2;
+  }
 }
-.main .brand {
-  display: inline;
-  font-family: "Lora", serif;
-  font-size: 3em;
-  font-weight: 700;
-  color: #000000;
-}
-.main .intro {
-  margin-top: 34px;
-}
-.main .intro p {
-  padding-bottom: 13px;
-  line-height: 1.5;
-  font-size: 18px;
-}
-.main .intro ul {
-  margin-top: 21px;
-  margin-bottom: 34px;
-  line-height: 1.5;
-  font-size: 18px;
-}
-
 .player-name {
   font-family: "Lora", serif;
   font-size: 2em;
@@ -138,6 +146,14 @@ button {
   font-size: 1.5em;
   font-weight: 400;
   color: #575757;
+}
+
+.player-health .player-barracks .fa-chess-king,
+.player-health .player-barracks .fa-chess-queen,
+.player-health .player-barracks .fa-chess-bishop,
+.player-health .player-barracks .fa-chess-rook,
+.player-health .player-barracks .fa-chess-pawn {
+  font-size: 1.3em;
 }
 
 .player {
@@ -300,45 +316,61 @@ button {
 .chessboard .black {
   display: inline-block;
   background-color: #000000;
-  width: 98px;
-  height: 98px;
-  border: 1px solid #000000;
+  width: 12.5%;
+  height: 12.5%;
 }
 .chessboard .white {
   display: inline-block;
   background-color: #ffffff;
-  width: 98px;
-  height: 98px;
-  border: 1px solid #000000;
+  width: 12.5%;
+  height: 12.5%;
 }
 
-.game-view {
+.header {
+  background-color: #000000;
+  color: #ffffff;
+}
+.header .brand {
+  font-size: 1.7em;
+  font-family: "Lora", serif;
+  margin-bottom: 8px;
+}
+
+.play-view {
   display: grid !important;
   grid-template-columns: 100%;
   grid-template-rows: auto auto auto auto;
 }
-.game-view .player {
+.play-view .chessboard {
+  grid-column: 1;
+  grid-row: 1;
+}
+.play-view .player {
+  grid-column: 1;
+  grid-row: 2;
   margin-top: 21px;
 }
-.game-view .message-box {
+.play-view .message-box {
+  grid-column: 1;
+  grid-row: 3;
   margin-top: 21px;
 }
 @media screen and (min-width: 800px) {
-  .game-view {
+  .play-view {
     display: grid !important;
-    grid-template-columns: 66% auto;
+    grid-template-columns: 55% 21% auto;
     grid-template-rows: auto auto;
   }
-  .game-view .chessboard {
+  .play-view .chessboard {
     grid-column: 1;
     grid-row: 1;
   }
-  .game-view .player {
+  .play-view .player {
     grid-column: 2;
     grid-row: 1;
     margin-top: 0;
   }
-  .game-view .message-box {
+  .play-view .message-box {
     grid-column: 1/span 2;
     grid-row: 2;
   }
