--- a/public/styles/views/_play-view.scss
+++ b/public/styles/views/_play-view.scss
@@ -1,4 +1,4 @@
-.game-view {
+.play-view {
 
   // Grid
   display: grid !important;
@@ -6,14 +6,21 @@
   grid-template-rows: auto auto auto auto;
 
   .chessboard {
-
+    grid-column: 1;
+    grid-row: 1;
   }
 
   .player {
+    grid-column: 1;
+    grid-row: 2;
+
     margin-top: $base-unit * fibonacci(7);
   }
 
   .message-box {
+    grid-column: 1;
+    grid-row: 3;
+
     margin-top: $base-unit * fibonacci(7);
   }
 
@@ -21,7 +28,7 @@
   @media screen and (min-width: $break-medium) {
 
     display: grid !important;
-    grid-template-columns: 66% auto;
+    grid-template-columns: 55% 21% auto;
     grid-template-rows: auto auto;
 
     .chessboard {
@@ -33,6 +40,7 @@
       grid-column: 2;
       grid-row: 1;
 
+      // Margin
       margin-top: 0;
     }
 
