--- a/public/styles/shared/_body.scss
+++ b/public/styles/shared/_body.scss
@@ -12,6 +12,7 @@
     // Padding
     padding-top: $base-unit * fibonacci(8);
     padding-right: $base-unit * fibonacci(7);
+    padding-bottom: $base-unit * fibonacci(8);
     padding-left: $base-unit * fibonacci(7);
   }
 
