--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -100,6 +100,7 @@ button {
   grid-row: 1;
   padding-top: 34px;
   padding-right: 21px;
+  padding-bottom: 34px;
   padding-left: 21px;
 }
 .body .main {
@@ -331,9 +332,25 @@ button {
   color: #ffffff;
 }
 .header .brand {
-  font-size: 1.7em;
+  font-size: 2.1em;
   font-family: "Lora", serif;
   margin-bottom: 8px;
+}
+.header .tagline {
+  font-style: italic;
+}
+.header nav {
+  margin-top: 21px;
+}
+.header nav ul li {
+  padding-top: 5px;
+  padding-right: 5px;
+}
+.header nav ul ul li {
+  padding-left: 5px;
+}
+.header nav a {
+  color: #ffffff;
 }
 
 .play-view {
