--- a/public/styles/chessboard/_chessboard.scss
+++ b/public/styles/chessboard/_chessboard.scss
@@ -1,19 +1,31 @@
 .chessboard {
 
+  width: 500px;
+  max-width: 100%;
+  height: 500px;
+  max-height: 100%;
+
+  .rank {
+    max-width: 100%;
+  }
+
   .black {
     display: inline-block;
     background-color: $black;
-    width: 12.5%;
-    height: 12.5%;
+    width: 100px;
+    max-width: 12.5%;
+    height: 100px;
+    max-height: 12.5%;
     // border: 1px solid $black;
   }
 
   .white {
     display: inline-block;
     background-color: $white;
-    width: 12.5%;
-    height: 12.5%;
-    // border: 1px solid $black;
+    width: 100px;
+    max-width: 12.5%;
+    height: 100px;
+    max-height: 12.5%;
   }
   
 
