--- a/public/styles/player/_player.scss
+++ b/public/styles/player/_player.scss
@@ -44,41 +44,41 @@
   // On medium
   @media screen and (min-width: $break-medium) {
 
-    display: grid !important;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto auto auto;
+    // display: grid !important;
+    // grid-template-columns: auto auto;
+    // grid-template-rows: auto auto auto auto;
 
-    .player-image {
-      grid-column: 1;
-      grid-row: 1 / span 5;
+    // .player-image {
+    //   grid-column: 1;
+    //   grid-row: 1 / span 5;
 
-      // Padding
-      padding-right: $base-unit * fibonacci(8);
-    }
+    //   // Padding
+    //   padding-right: $base-unit * fibonacci(8);
+    // }
   
-    .player-name {
-      grid-column: 2;
-      grid-row: 1;
+    // .player-name {
+    //   grid-column: 2;
+    //   grid-row: 1;
 
-      // Padding
-      padding-top: 0;
-    }
+    //   // Padding
+    //   padding-top: 0;
+    // }
   
-    .player-status {
-      grid-column: 2;
-      grid-row: 2;
+    // .player-status {
+    //   grid-column: 2;
+    //   grid-row: 2;
 
-      // Padding
-      padding-top: $base-unit * fibonacci(5);
-    }
+    //   // Padding
+    //   padding-top: $base-unit * fibonacci(5);
+    // }
   
-    .player-color {
-      grid-column: 2;
-      grid-row: 3;
+    // .player-color {
+    //   grid-column: 2;
+    //   grid-row: 3;
 
-      // Padding
-      padding-top: $base-unit * fibonacci(4);
-    }
+    //   // Padding
+    //   padding-top: $base-unit * fibonacci(4);
+    // }
 
   }
 
