--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -6,7 +6,7 @@ html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
+strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
@@ -183,33 +183,6 @@ button {
   grid-row: 4;
   padding-top: 5px;
 }
-@media screen and (min-width: 800px) {
-  .player {
-    display: grid !important;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto auto auto;
-  }
-  .player .player-image {
-    grid-column: 1;
-    grid-row: 1/span 5;
-    padding-right: 34px;
-  }
-  .player .player-name {
-    grid-column: 2;
-    grid-row: 1;
-    padding-top: 0;
-  }
-  .player .player-status {
-    grid-column: 2;
-    grid-row: 2;
-    padding-top: 8px;
-  }
-  .player .player-color {
-    grid-column: 2;
-    grid-row: 3;
-    padding-top: 5px;
-  }
-}
 .total-play-time {
   font-family: "Lora", serif;
   font-size: 1.6em;
@@ -269,6 +242,7 @@ button {
 }
 .message-content {
   font-size: 1.5em;
+  line-height: 1.5;
 }
 
 .message-box {
@@ -314,17 +288,30 @@ button {
     grid-row: 2;
   }
 }
+.chessboard {
+  width: 500px;
+  max-width: 100%;
+  height: 500px;
+  max-height: 100%;
+}
+.chessboard .rank {
+  max-width: 100%;
+}
 .chessboard .black {
   display: inline-block;
   background-color: #000000;
-  width: 12.5%;
-  height: 12.5%;
+  width: 100px;
+  max-width: 12.5%;
+  height: 100px;
+  max-height: 12.5%;
 }
 .chessboard .white {
   display: inline-block;
   background-color: #ffffff;
-  width: 12.5%;
-  height: 12.5%;
+  width: 100px;
+  max-width: 12.5%;
+  height: 100px;
+  max-height: 12.5%;
 }
 
 .header {
@@ -338,6 +325,7 @@ button {
 }
 .header .tagline {
   font-style: italic;
+  margin-bottom: 13px;
 }
 .header nav {
   margin-top: 21px;
@@ -375,7 +363,7 @@ button {
 @media screen and (min-width: 800px) {
   .play-view {
     display: grid !important;
-    grid-template-columns: 55% 21% auto;
+    grid-template-columns: 89% auto;
     grid-template-rows: auto auto;
   }
   .play-view .chessboard {
