--- a/public/styles/views/_play-view.scss
+++ b/public/styles/views/_play-view.scss
@@ -28,7 +28,7 @@
   @media screen and (min-width: $break-medium) {
 
     display: grid !important;
-    grid-template-columns: 55% 21% auto;
+    grid-template-columns: 89% auto;
     grid-template-rows: auto auto;
 
     .chessboard {
