Wrapped up save slot for alpha.

--- a/public/styles/save-slot/_total-play-time.scss
+++ b/public/styles/save-slot/_total-play-time.scss
@@ -1,6 +1,6 @@
 .total-play-time {
-  font-family: $title-font;
-  font-size: 1.6em;
+  font-family: $body-font;
+  font-size: 1.4em;
   font-weight: 400;
   color: $middle-grey;
 }
