--- a/public/styles/save-slot/_save-slot.scss
+++ b/public/styles/save-slot/_save-slot.scss
@@ -2,8 +2,8 @@
 
   // Grid
   display: grid !important;
-  grid-template-columns: 100%;
-  grid-template-rows: auto auto auto auto;
+  grid-template-columns: 55% auto;
+  grid-template-rows: auto auto auto auto auto auto;
 
   // Padding
   padding: $base-unit * fibonacci(8);
@@ -11,60 +11,46 @@
   // Borders
   border: 1px solid $lightest-grey;
 
-  .player-image {
-    grid-column: 1;
+  .file-number {
+    grid-column: 1 / span 2;
     grid-row: 1;
   }
 
   .player-name {
-    grid-column: 1;
+    grid-column: 1 / span 2;
     grid-row: 2;
 
     // Padding
-    padding-top: $base-unit * fibonacci(6);
-    padding-bottom: $base-unit * fibonacci(6);
+    margin-top: $base-unit * fibonacci(6);
   }
 
-  .total-play-time {
-    grid-column: 1;
+  .save-date {
+    grid-column: 1 / span 2;
     grid-row: 3;
 
     // Padding
-    padding-top: $base-unit * fibonacci(6);
-    padding-bottom: $base-unit * fibonacci(6);
+    margin-top: $base-unit * fibonacci(6);
+  }
+
+  .total-play-time {
+    grid-column: 1 / span 2;
+    grid-row: 4;
+
+    // Padding
+    margin-top: $base-unit * fibonacci(6);
   }
 
   .save-buttons {
     grid-column: 1;
-    grid-row: 4;
+    grid-row: 5;
+
+    // Padding
+    margin-top: $base-unit * fibonacci(8);
   }
 
   // On medium
   @media screen and (min-width: $break-medium) {
 
-    display: grid !important;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto;
-
-    .player-image {
-      grid-column: 1;
-      grid-row: 1 / span 2;
-    }
-
-    .player-name {
-      grid-column: 2;
-      grid-row: 1;
-    }
-
-    .total-play-time {
-      grid-column: 2;
-      grid-row: 2;
-    }
-
-    .save-buttons {
-      grid-column: 3;
-      grid-row: 1;
-    }
   }
 
   // On wide
