--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -88,6 +88,11 @@ button {
   font-family: "Montserrat", sans-serif;
   font-size: 0.9em;
   padding: 13px;
+  transition-duration: 0.4s;
+}
+button:hover {
+  background-color: #000000;
+  color: #ffffff;
 }
 
 .body {
@@ -183,63 +188,58 @@ button {
   grid-row: 4;
   padding-top: 5px;
 }
+.file-number {
+  font-size: 1.2em;
+  color: #8c8c8c;
+}
+
 .total-play-time {
-  font-family: "Lora", serif;
-  font-size: 1.6em;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.4em;
   font-weight: 400;
   color: #575757;
 }
 
+.save-date {
+  font-size: 1.2em;
+}
+
 .save-slot {
   display: grid !important;
-  grid-template-columns: 100%;
-  grid-template-rows: auto auto auto auto;
+  grid-template-columns: 55% auto;
+  grid-template-rows: auto auto auto auto auto auto;
   padding: 34px;
   border: 1px solid #e3e3e3;
 }
-.save-slot .player-image {
-  grid-column: 1;
+.save-slot .file-number {
+  grid-column: 1/span 2;
   grid-row: 1;
 }
 .save-slot .player-name {
-  grid-column: 1;
+  grid-column: 1/span 2;
   grid-row: 2;
-  padding-top: 13px;
-  padding-bottom: 13px;
+  margin-top: 13px;
+}
+.save-slot .save-date {
+  grid-column: 1/span 2;
+  grid-row: 3;
+  margin-top: 13px;
 }
 .save-slot .total-play-time {
-  grid-column: 1;
-  grid-row: 3;
-  padding-top: 13px;
-  padding-bottom: 13px;
+  grid-column: 1/span 2;
+  grid-row: 4;
+  margin-top: 13px;
 }
 .save-slot .save-buttons {
   grid-column: 1;
-  grid-row: 4;
+  grid-row: 5;
+  margin-top: 34px;
 }
-@media screen and (min-width: 800px) {
-  .save-slot {
-    display: grid !important;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto;
-  }
-  .save-slot .player-image {
-    grid-column: 1;
-    grid-row: 1/span 2;
-  }
-  .save-slot .player-name {
-    grid-column: 2;
-    grid-row: 1;
-  }
-  .save-slot .total-play-time {
-    grid-column: 2;
-    grid-row: 2;
-  }
-  .save-slot .save-buttons {
-    grid-column: 3;
-    grid-row: 1;
-  }
+.save-buttons button {
+  display: block;
+  width: 100%;
 }
+
 .message-content {
   font-size: 1.5em;
   line-height: 1.5;
