Wrapped up player component, for now.

--- a/public/styles/player/_player-material.scss
+++ b/public/styles/player/_player-material.scss
@@ -1,4 +1,4 @@
-.player-health {
+.player-material {
 
   meter {
     // -webkit-appearance: none; /* Reset appearance */
@@ -7,7 +7,7 @@
     // background-color: $middle-grey;
   }
 
-  .player-barracks {
+  .piece-count {
 
     .fa-chess-king,
     .fa-chess-queen,
