--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -15,7 +15,7 @@
 @import 'player/player-name';
 @import 'player/player-status';
 @import 'player/player-image';
-@import 'player/player-health';
+@import 'player/player-material';
 @import 'player/player';
 
 // Pieces
