Solid work on board and board coordinates layout.

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -40,7 +40,10 @@
 
 // Chessboard
 @import 'chessboard/chessboard';
-@import 'chessboard/coordinates';
+
+// Coordinates
+@import 'coordinates/files';
+@import 'coordinates/ranks';
 
 // Header
 @import 'header/header';
