--- a/public/styles/chessboard/_chessboard.scss
+++ b/public/styles/chessboard/_chessboard.scss
@@ -1,32 +1,51 @@
-.chessboard {
+.chessboard-container {
 
-  width: 500px;
   max-width: 100%;
-  height: 500px;
   max-height: 100%;
 
-  .rank {
-    max-width: 100%;
+  // Grid
+  display: grid !important;
+  grid-template-columns: 5% auto;
+  grid-template-rows: 5% auto;
+
+  .files {
+    grid-column: 2;
+    grid-row: 1;
   }
 
-  .black {
-    display: inline-block;
-    background-color: $black;
-    width: 100px;
-    max-width: 12.5%;
-    height: 100px;
-    max-height: 12.5%;
-    // border: 1px solid $black;
+  .ranks {
+    grid-column: 1;
+    grid-row: 2;
   }
 
-  .white {
-    display: inline-block;
-    background-color: $white;
-    width: 100px;
-    max-width: 12.5%;
-    height: 100px;
-    max-height: 12.5%;
-  }
+  .chessboard {
+
+    grid-column: 2;
+    grid-row: 2;
+
+    .rank-row {
+      max-width: 100%;
+    }
   
+    .black {
+      display: inline-block;
+      background-color: $black;
+      width: 100px;
+      max-width: 12.5%;
+      height: 100px;
+      max-height: 12.5%;
+      // border: 1px solid $black;
+    }
+  
+    .white {
+      display: inline-block;
+      background-color: $white;
+      width: 100px;
+      max-width: 12.5%;
+      height: 100px;
+      max-height: 12.5%;
+    }
+
+  }
 
 }
