--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -288,16 +288,29 @@ button:hover {
     grid-row: 2;
   }
 }
-.chessboard {
-  width: 500px;
+.chessboard-container {
   max-width: 100%;
-  height: 500px;
   max-height: 100%;
+  display: grid !important;
+  grid-template-columns: 5% auto;
+  grid-template-rows: 5% auto;
 }
-.chessboard .rank {
+.chessboard-container .files {
+  grid-column: 2;
+  grid-row: 1;
+}
+.chessboard-container .ranks {
+  grid-column: 1;
+  grid-row: 2;
+}
+.chessboard-container .chessboard {
+  grid-column: 2;
+  grid-row: 2;
+}
+.chessboard-container .chessboard .rank-row {
   max-width: 100%;
 }
-.chessboard .black {
+.chessboard-container .chessboard .black {
   display: inline-block;
   background-color: #000000;
   width: 100px;
@@ -305,13 +318,36 @@ button:hover {
   height: 100px;
   max-height: 12.5%;
 }
-.chessboard .white {
+.chessboard-container .chessboard .white {
   display: inline-block;
   background-color: #ffffff;
   width: 100px;
   max-width: 12.5%;
   height: 100px;
   max-height: 12.5%;
+}
+
+.files {
+  max-width: 100%;
+}
+.files .file {
+  width: 12.5%;
+  display: inline-block;
+}
+.files .file .file-letter {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.ranks {
+  max-height: 100%;
+}
+.ranks .rank {
+  height: 12.5%;
+  display: block;
+}
+.ranks .rank .rank-number {
+  margin: auto 0;
 }
 
 .header {
@@ -346,7 +382,7 @@ button:hover {
   grid-template-columns: 100%;
   grid-template-rows: auto auto auto auto;
 }
-.play-view .chessboard {
+.play-view .chessboard-container {
   grid-column: 1;
   grid-row: 1;
 }
@@ -366,7 +402,7 @@ button:hover {
     grid-template-columns: 89% auto;
     grid-template-rows: auto auto;
   }
-  .play-view .chessboard {
+  .play-view .chessboard-container {
     grid-column: 1;
     grid-row: 1;
   }
