--- a/public/styles/views/_play-view.scss
+++ b/public/styles/views/_play-view.scss
@@ -5,7 +5,7 @@
   grid-template-columns: 100%;
   grid-template-rows: auto auto auto auto;
 
-  .chessboard {
+  .chessboard-container {
     grid-column: 1;
     grid-row: 1;
   }
@@ -31,7 +31,7 @@
     grid-template-columns: 89% auto;
     grid-template-rows: auto auto;
 
-    .chessboard {
+    .chessboard-container {
       grid-column: 1;
       grid-row: 1;
     }
