More styling work, mostly on the player and move list components.

--- a/public/styles/coordinates/_files.scss
+++ b/public/styles/coordinates/_files.scss
@@ -8,8 +8,8 @@
     display: inline-block;
 
     .file-letter {
-      margin: 0 auto;
       text-align: center;
+      display: inline-block;
     }
   }
 }
