--- a/public/styles/header/_header.scss
+++ b/public/styles/header/_header.scss
@@ -39,6 +39,10 @@
 
         li {
           padding-left: $base-unit * fibonacci(4);
+
+          a {
+            color: $light-grey;
+          }
         }
       }
     }
