--- a/public/styles/chessboard/_chessboard.scss
+++ b/public/styles/chessboard/_chessboard.scss
@@ -1,7 +1,10 @@
 .chessboard-container {
 
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
+
+  // Position
+  position: relative;
 
   // Grid
   display: grid !important;
@@ -20,30 +23,36 @@
 
   .chessboard {
 
+    // Position
+    position: relative;
+
+    width: 100%;
     grid-column: 2;
     grid-row: 2;
 
-    .rank-row {
-      max-width: 100%;
+    .row {
+      width: 100%;
+
+      position: relative;
     }
   
     .black {
-      display: inline-block;
+      display: block;
       background-color: $black;
-      width: 100px;
-      max-width: 12.5%;
-      height: 100px;
-      max-height: 12.5%;
+      width: 12.5%;
+      height: 12.5%;
+
+      position: relative;
       // border: 1px solid $black;
     }
   
     .white {
-      display: inline-block;
+      display: block;
       background-color: $white;
-      width: 100px;
-      max-width: 12.5%;
-      height: 100px;
-      max-height: 12.5%;
+      width: 12.5%;
+      height: 12.5%;
+
+      position: relative;
     }
 
   }
