--- a/public/styles/player/_player-status.scss
+++ b/public/styles/player/_player-status.scss
@@ -1,6 +1,6 @@
 .player-status {
-  font-family: $title-font;
-  font-size: 1.5em;
+  font-family: $body-font;
+  font-size: 1.3em;
   font-weight: 400;
   color: $middle-grey;
 }
