--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -148,12 +148,16 @@ button:hover {
 }
 
 .player-status {
-  font-family: "Lora", serif;
-  font-size: 1.5em;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.3em;
   font-weight: 400;
   color: #575757;
 }
 
+.player-material {
+  background-color: #e3e3e3;
+  padding: 8px;
+}
 .player-material .piece-count .fa-chess-king,
 .player-material .piece-count .fa-chess-queen,
 .player-material .piece-count .fa-chess-bishop,
@@ -162,12 +166,33 @@ button:hover {
   font-size: 1.3em;
 }
 
+.player-color {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 50px 50px 0 0;
+  border-color: #007bff transparent transparent transparent;
+}
+.player-color .fa-flag {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .player {
   display: grid !important;
   grid-template-columns: 100%;
   grid-template-rows: auto auto auto auto auto auto;
   padding: 34px;
   border: 1px solid #e3e3e3;
+  position: relative;
+}
+.player .player-color {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 .player .player-name {
   grid-column: 1;
@@ -176,11 +201,6 @@ button:hover {
 .player .player-status {
   grid-column: 1;
   grid-row: 2;
-  margin-top: 13px;
-}
-.player .player-color {
-  grid-column: 1;
-  grid-row: 3;
   margin-top: 13px;
 }
 .player .player-material {
@@ -210,34 +230,46 @@ button:hover {
   grid-template-rows: auto auto auto auto auto auto;
   padding: 34px;
   border: 1px solid #e3e3e3;
+  position: relative;
 }
 .save-slot .file-number {
-  grid-column: 1/span 2;
-  grid-row: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .save-slot .player-name {
   grid-column: 1/span 2;
-  grid-row: 2;
+  grid-row: 1;
   margin-top: 13px;
 }
 .save-slot .save-date {
   grid-column: 1/span 2;
-  grid-row: 3;
+  grid-row: 2;
   margin-top: 13px;
 }
 .save-slot .total-play-time {
   grid-column: 1/span 2;
-  grid-row: 4;
+  grid-row: 3;
   margin-top: 13px;
 }
 .save-slot .save-buttons {
   grid-column: 1;
-  grid-row: 5;
+  grid-row: 4;
   margin-top: 34px;
 }
 .save-buttons button {
   display: block;
   width: 100%;
+}
+
+.move-list {
+  width: 100%;
+  border-collapse: collapse;
+}
+.move-list tr,
+.move-list td {
+  border-top: 1px solid #e3e3e3;
+  padding: 5px;
 }
 
 .message-content {
@@ -289,8 +321,9 @@ button:hover {
   }
 }
 .chessboard-container {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  position: relative;
   display: grid !important;
   grid-template-columns: 5% auto;
   grid-template-rows: 5% auto;
@@ -304,27 +337,28 @@ button:hover {
   grid-row: 2;
 }
 .chessboard-container .chessboard {
+  position: relative;
+  width: 100%;
   grid-column: 2;
   grid-row: 2;
 }
-.chessboard-container .chessboard .rank-row {
-  max-width: 100%;
+.chessboard-container .chessboard .row {
+  width: 100%;
+  position: relative;
 }
 .chessboard-container .chessboard .black {
-  display: inline-block;
+  display: block;
   background-color: #000000;
-  width: 100px;
-  max-width: 12.5%;
-  height: 100px;
-  max-height: 12.5%;
+  width: 12.5%;
+  height: 12.5%;
+  position: relative;
 }
 .chessboard-container .chessboard .white {
-  display: inline-block;
+  display: block;
   background-color: #ffffff;
-  width: 100px;
-  max-width: 12.5%;
-  height: 100px;
-  max-height: 12.5%;
+  width: 12.5%;
+  height: 12.5%;
+  position: relative;
 }
 
 .files {
@@ -335,8 +369,8 @@ button:hover {
   display: inline-block;
 }
 .files .file .file-letter {
-  margin: 0 auto;
   text-align: center;
+  display: inline-block;
 }
 
 .ranks {
@@ -372,6 +406,9 @@ button:hover {
 }
 .header nav ul ul li {
   padding-left: 5px;
+}
+.header nav ul ul li a {
+  color: #8c8c8c;
 }
 .header nav a {
   color: #ffffff;
